faq extr list fix, cred and channel i18n, content tooltip fix

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -189,7 +189,7 @@
     },
     "stopWords": {
         "stop_words": "Stop Words",
-        "enable_stop_word_removal": "Enable Stop Word Removal",
+        "enable_stop_word_removal": "Enable StopWords ",
         "stop_word_removal_disabled": "Stop Word Removal Disabled",
         "add_stop_word": "Add Stop Word",
         "stop_word_already_added": "Stop word already added",
@@ -413,5 +413,79 @@
         "searchInterfacePath" : "Indices >> Result Templates",
         "toDefine" : "to define.",
         "learnMore" : "Learn More"
+    },
+    "settings" : {
+        "channels": "Channels",
+        "search": "Search",
+        "web_mobile_client": "Web/Mobile Client",
+        "info_text": "Configure destinations for your app to communicate with one or more of the channel selection below. Each channel may have a unique process to enable it but the instructions are provided.",
+        "delete": "Delete",
+        "configured":"CONFIGURED",
+        "instructions":"Instructions",
+        "select _credential":"Select Credential",
+        "generate_token":"Generate Token",
+        "step_1":"STEP 1",
+        "download_searchassist_kit_sdk":"Download SearchAssist Kit SDK",
+        "download_info":"Download the Kore.ai SearchAssist Kit SDK from our GitHub Repo",
+        "step_2":"STEP 2",
+        "register_credential":"Register Credential",
+        "register_info":"Create an credential or register an existing credential from below.",
+        "step_3":"STEP 3",
+        "define_callback_url":"Define Callback URL",
+        "callback_info":"Define the callback URL of your credential to be invoked for SearchAssist Kit SDK events.",
+        "step_4":"STEP 4",
+        "select_events":"Select Events",
+        "select_events_info":"Select the required events and complete the setup process.",
+        "seems_like_there_are_no_credentails_created":"Seems like there are no credentails created",
+        "create_a_credential_to_associate_it_with_the_channel":"Create a credential to associate it with the channel",
+        "credential_name":"Credential Name",
+        "allow_anonymous_users_to_chat_with_the_bot":"Allow anonymous users to chat with the bot",
+        "jwt_algorithm":"JWT Signing Algorithm Used For Client App Authentication",
+        "RS256":"RS256",
+        "HS256":"HS256",
+        "push_notifications_enabled":"Push Notifications Enabled",
+        "select_credential":"Select Credential",
+        "add_new_credential":"Add New Credential",
+        "copy":"Copy",
+        "App_Name":"App Name",
+        "App_ID":"App ID",
+        "Client_ID":"Client ID",
+        "Client_Secret_ID":"Client Secret ID",
+        "Search_ID":"Search ID",
+        "view_JSON_web_encryption_public_key ":"View JSON Web Encryption Public Key ",
+        "task_setup":"Allow Alert Task Setup",
+        "task_setup_info":"Yes, let users setup alert tasks using the web client",
+        "no_task_setup_info":"No, do not list alert tasks or allow users to setup alert tasks using the web client",
+        "channel_enabled":"Channel Enabled",
+        "cancel":"Cancel",
+        "continue":"Continue",
+        "save":"Save",
+        "back":"Back",
+        "add_credential":"Add Credential",
+        "allow_anonymous_users_to_chat_with_bot":"Allow anonymous users to chat with bot",
+        "auto_register_new_user_Kore.ai_bots_platform":"Auto register new user Kore.ai Bots Platform",
+        "add":"Add"
+    },
+    "credentials":{
+        "no_configured_credentials":"You haven’t configured any credentials yet!",
+        "cred_info_text":"SearchAssist allows you to configure Credentials to enable channels and API Scopes for your SearchAssist application.",
+        "configure":"Configure",
+        "your_search_query_doesn't_match_with_any_record":"Your Search Query doesn't match with any record.",
+        "manage_credentials":"Manage Credentials",
+        "add_credential":"Add Credential",
+        "search":"Search",
+        "credential_name":"Credential Name",
+        "credential_ussge":"Credential usage",
+        "last_updated":"last updated",
+        "last_updated_by":"last updated",
+        "allow_anonymous_users_to_chat_with_the_bot":"Allow anonymous users to chat with the bot",
+        "jwt_algorithm":"JWT Signing Algorithm Used For Client App Authentication",
+        "RS256":"RS256",
+        "HS256":"HS256",
+        "push_notifications_enabled":"Push Notifications Enabled",
+        "edit_credential":"Edit Credential",
+        "add":"Add",
+        "cancel":"Cancel",
+        "save":"Save"
     }
 }
