--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -84,11 +84,11 @@
     "clear_all": "Clear all",
     "array": "Array",
     "object": "Object",
-    "test" : "Test",
-    "botAction":{
-        "disable":"Disable",
-        "enable":"Enable",
-        "tasksSelected":"Tasks Selected"
+    "test": "Test",
+    "botAction": {
+        "disable": "Disable",
+        "enable": "Enable",
+        "tasksSelected": "Tasks Selected"
     },
     "businessRules": {
         "rules_selected": "Rules Selected",
@@ -364,7 +364,7 @@
         "addManually": "Add Manually",
         "delete": "Delete",
         "cancel": "Cancel",
-        "close" : "Close",
+        "close": "Close",
         "apply": "Apply",
         "addField": "Add Data",
         "searchFilterDesc": "Eg: field==lastName||(field==FirstName&&field==Age)",
@@ -374,8 +374,8 @@
         "configuratoin_success": "Successfully Configured.",
         "validation_success": "Successfully Validated",
         "configuration_failed": "Configuration Failed",
-        "validation_failed" : "Validation Failed",
-        "file_validation_failed" : "File Validation.",
+        "validation_failed": "Validation Failed",
+        "file_validation_failed": "File Validation.",
         "initial_file_validation": "Initial File Validation",
         "import_progress": "Import In-progress",
         "import_done": "Import Done",
@@ -402,91 +402,120 @@
         "_or": "OR",
         "add_rule": "Add Rule",
         "edit_structured_data": "Edit Structured Data",
-        "key_caps" : "KEY",
-        "value_caps" : "VALUE",
-        "selected" : "Selected",
-        "fields" : "Fields",
-        "view_structured_data" : "View Structured Data",
-        "edit" : "Edit",
-        "updated_by" : "Updated by",
-        "updated_on" : "Last Updated On",
-        "noResultTemplate" : "Result templates are not defined for structured data. Go to",
-        "searchInterfacePath" : "Indices >> Result Templates",
-        "toDefine" : "to define.",
-        "learnMore" : "Learn More"
+        "key_caps": "KEY",
+        "value_caps": "VALUE",
+        "selected": "Selected",
+        "fields": "Fields",
+        "view_structured_data": "View Structured Data",
+        "edit": "Edit",
+        "updated_by": "Updated by",
+        "updated_on": "Last Updated On",
+        "noResultTemplate": "Result templates are not defined for structured data. Go to",
+        "searchInterfacePath": "Indices >> Result Templates",
+        "toDefine": "to define.",
+        "learnMore": "Learn More"
     },
-    "settings" : {
+    "settings": {
         "channels": "Channels",
         "search": "Search",
         "web_mobile_client": "Web/Mobile Client",
         "info_text": "Configure destinations for your app to communicate with one or more of the channel selection below. Each channel may have a unique process to enable it but the instructions are provided.",
         "delete": "Delete",
-        "configured":"CONFIGURED",
-        "instructions":"Instructions",
-        "select _credential":"Select Credential",
-        "generate_token":"Generate Token",
-        "step_1":"STEP 1",
-        "download_searchassist_kit_sdk":"Download SearchAssist Kit SDK",
-        "download_info":"Download the Kore.ai SearchAssist Kit SDK from our GitHub Repo",
-        "step_2":"STEP 2",
-        "register_credential":"Register Credential",
-        "register_info":"Create an credential or register an existing credential from below.",
-        "step_3":"STEP 3",
-        "define_callback_url":"Define Callback URL",
-        "callback_info":"Define the callback URL of your credential to be invoked for SearchAssist Kit SDK events.",
-        "step_4":"STEP 4",
-        "select_events":"Select Events",
-        "select_events_info":"Select the required events and complete the setup process.",
-        "seems_like_there_are_no_credentails_created":"Seems like there are no credentails created",
-        "create_a_credential_to_associate_it_with_the_channel":"Create a credential to associate it with the channel",
-        "credential_name":"Credential Name",
-        "allow_anonymous_users_to_chat_with_the_bot":"Allow anonymous users to chat with the bot",
-        "jwt_algorithm":"JWT Signing Algorithm Used For Client App Authentication",
-        "RS256":"RS256",
-        "HS256":"HS256",
-        "push_notifications_enabled":"Push Notifications Enabled",
-        "select_credential":"Select Credential",
-        "add_new_credential":"Add New Credential",
-        "copy":"Copy",
-        "App_Name":"App Name",
-        "App_ID":"App ID",
-        "Client_ID":"Client ID",
-        "Client_Secret_ID":"Client Secret ID",
-        "Search_ID":"Search ID",
-        "view_JSON_web_encryption_public_key ":"View JSON Web Encryption Public Key ",
-        "task_setup":"Allow Alert Task Setup",
-        "task_setup_info":"Yes, let users setup alert tasks using the web client",
-        "no_task_setup_info":"No, do not list alert tasks or allow users to setup alert tasks using the web client",
-        "channel_enabled":"Channel Enabled",
-        "cancel":"Cancel",
-        "continue":"Continue",
-        "save":"Save",
-        "back":"Back",
-        "add_credential":"Add Credential",
-        "allow_anonymous_users_to_chat_with_bot":"Allow anonymous users to chat with bot",
-        "auto_register_new_user_Kore.ai_bots_platform":"Auto register new user Kore.ai Bots Platform",
-        "add":"Add"
+        "configured": "CONFIGURED",
+        "instructions": "Instructions",
+        "select _credential": "Select Credential",
+        "generate_token": "Generate Token",
+        "step_1": "STEP 1",
+        "download_searchassist_kit_sdk": "Download SearchAssist Kit SDK",
+        "download_info": "Download the Kore.ai SearchAssist Kit SDK from our GitHub Repo",
+        "step_2": "STEP 2",
+        "register_credential": "Register Credential",
+        "register_info": "Create an credential or register an existing credential from below.",
+        "step_3": "STEP 3",
+        "define_callback_url": "Define Callback URL",
+        "callback_info": "Define the callback URL of your credential to be invoked for SearchAssist Kit SDK events.",
+        "step_4": "STEP 4",
+        "select_events": "Select Events",
+        "select_events_info": "Select the required events and complete the setup process.",
+        "seems_like_there_are_no_credentails_created": "Seems like there are no credentails created",
+        "create_a_credential_to_associate_it_with_the_channel": "Create a credential to associate it with the channel",
+        "credential_name": "Credential Name",
+        "allow_anonymous_users_to_chat_with_the_bot": "Allow anonymous users to chat with the bot",
+        "jwt_algorithm": "JWT Signing Algorithm Used For Client App Authentication",
+        "RS256": "RS256",
+        "HS256": "HS256",
+        "push_notifications_enabled": "Push Notifications Enabled",
+        "select_credential": "Select Credential",
+        "add_new_credential": "Add New Credential",
+        "copy": "Copy",
+        "App_Name": "App Name",
+        "App_ID": "App ID",
+        "Client_ID": "Client ID",
+        "Client_Secret_ID": "Client Secret ID",
+        "Search_ID": "Search ID",
+        "view_JSON_web_encryption_public_key ": "View JSON Web Encryption Public Key ",
+        "task_setup": "Allow Alert Task Setup",
+        "task_setup_info": "Yes, let users setup alert tasks using the web client",
+        "no_task_setup_info": "No, do not list alert tasks or allow users to setup alert tasks using the web client",
+        "channel_enabled": "Channel Enabled",
+        "cancel": "Cancel",
+        "continue": "Continue",
+        "save": "Save",
+        "back": "Back",
+        "add_credential": "Add Credential",
+        "allow_anonymous_users_to_chat_with_bot": "Allow anonymous users to chat with bot",
+        "auto_register_new_user_Kore.ai_bots_platform": "Auto register new user Kore.ai Bots Platform",
+        "add": "Add"
     },
-    "credentials":{
-        "no_configured_credentials":"You haven’t configured any credentials yet!",
-        "cred_info_text":"SearchAssist allows you to configure Credentials to enable channels and API Scopes for your SearchAssist application.",
-        "configure":"Configure",
-        "your_search_query_doesn't_match_with_any_record":"Your Search Query doesn't match with any record.",
-        "manage_credentials":"Manage Credentials",
-        "add_credential":"Add Credential",
-        "search":"Search",
-        "credential_name":"Credential Name",
-        "credential_ussge":"Credential usage",
-        "last_updated":"last updated",
-        "last_updated_by":"last updated",
-        "allow_anonymous_users_to_chat_with_the_bot":"Allow anonymous users to chat with the bot",
-        "jwt_algorithm":"JWT Signing Algorithm Used For Client App Authentication",
-        "RS256":"RS256",
-        "HS256":"HS256",
-        "push_notifications_enabled":"Push Notifications Enabled",
-        "edit_credential":"Edit Credential",
-        "add":"Add",
-        "cancel":"Cancel",
-        "save":"Save"
+    "credentials": {
+        "no_configured_credentials": "You haven’t configured any credentials yet!",
+        "cred_info_text": "SearchAssist allows you to configure Credentials to enable channels and API Scopes for your SearchAssist application.",
+        "configure": "Configure",
+        "your_search_query_doesn't_match_with_any_record": "Your Search Query doesn't match with any record.",
+        "manage_credentials": "Manage Credentials",
+        "add_credential": "Add Credential",
+        "search": "Search",
+        "credential_name": "Credential Name",
+        "credential_ussge": "Credential usage",
+        "last_updated": "last updated",
+        "last_updated_by": "last updated",
+        "allow_anonymous_users_to_chat_with_the_bot": "Allow anonymous users to chat with the bot",
+        "jwt_algorithm": "JWT Signing Algorithm Used For Client App Authentication",
+        "RS256": "RS256",
+        "HS256": "HS256",
+        "push_notifications_enabled": "Push Notifications Enabled",
+        "edit_credential": "Edit Credential",
+        "add": "Add",
+        "cancel": "Cancel",
+        "save": "Save"
+    },
+    "experiments": {
+        "name": "Experiments",
+        "add_btn": "Add Experiment",
+        "exp_name": "Experiment Name",
+        "variants": "Variants",
+        "status": "Status",
+        "duration": "DURATION",
+        "winner": "Winner",
+        "start_date": "Start Date",
+        "end_date": "End Date",
+        "more": "more to go",
+        "cannot_run": "You cannot run multiple experiments",
+        "run": "Run",
+        "view_configuration": "View configuration",
+        "variant": "Variant",
+        "index": "INDEX",
+        "search_config": "SEARCH CONFIG",
+        "users": "users",
+        "searches": "Searches",
+        "clicks": "Clicks",
+        "ctr": "CTR (goal)",
+        "empty_experiment": "Oops!! Experiements is not available in your current Plan",
+        "upgrade": "Upgrade",
+        "havenot_added": "You haven’t added any experiments yet!",
+        "desc_text": "Experiments is the best way to test multiple search configuration variants and pick the best one that fulfills business needs. SearchAssist allows you to create experiments with two or more variants to continuously improve search relevance and user experience.",
+        "no_result_found": "No results found",
+        "view_experiment": "View Experiment",
+        "new_experiment": "New Experiment"
     }
 }
