--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -516,6 +516,145 @@
         "desc_text": "Experiments is the best way to test multiple search configuration variants and pick the best one that fulfills business needs. SearchAssist allows you to create experiments with two or more variants to continuously improve search relevance and user experience.",
         "no_result_found": "No results found",
         "view_experiment": "View Experiment",
-        "new_experiment": "New Experiment"
+        "new_experiment": "New Experiment",
+        "exp_cannot_edited": "Experiment cannot be edited",
+        "var_name": "Variant Name",
+        "exp_index": "Index",
+        "search_configuration": "Search Configuration",
+        "add_variant": "Add Variant",
+        "traffic": "Traffic",
+        "exp_duration": "Duration",
+        "exp_days": "Days",
+        "save_btn": "Add",
+        "cancel_btn": "Cancel"
+    },
+    "plan": {
+        "plan_head": "Plan Details",
+        "upgrade_btn": "Upgrade",
+        "revert_cancellation_btn": "Revert Cancellation",
+        "reactivate_btn": "Reactivate",
+        "subscription_cancelled": "Subscription Cancelled",
+        "current_subscription_plan": "Current Subscription Plan",
+        "add_overage": "Add Overage",
+        "change_plan": "Change Plan",
+        "cancel_subscription": "Cancel Subscription",
+        "month": "month",
+        "year": "year",
+        "started_on": "Started On",
+        "renewal_date": "Renewal Date",
+        "end_date": "End Date",
+        "valid_till": "Valid till",
+        "usage": "Usage",
+        "queries": "Queries",
+        "documents": "Documents",
+        "your_plan_will_changed": "Your plan will be changed from Pro to Standard by the end of the billing cycle i.e.",
+        "cancel_request": "Cancel request",
+        "upgrade_to": "Upgrade to",
+        "monthly": "Monthly",
+        "yearly": "Annually",
+        "compare_plans": "Compare Plans",
+        "custom": "Custom",
+        "contact_us": "Contact Us",
+        "choose_plan": "Choose Plan",
+        "usage_metrics": "Usage Metrics",
+        "document_ingestion_analytics": "Document Ingestion Analytics",
+        "last_6_months": "Last 6 Months",
+        "query_usage_analytics": "Query Usage Analytics",
+        "overage_plan": "Overage Plan",
+        "overage_desc": "The document/query is reaching maximum limit for your current plan. No worries, We got you covered!!",
+        "add": "Add",
+        "additional": "Additional",
+        "documents_to_your_plan": "documents to your plan",
+        "add_documents": "Add Documents",
+        "queries_to_your_plan": "queries to your plan",
+        "add_queries": "Add Queries",
+        "you_can_also_choose_to": "You can also choose to",
+        "upgrade_your_plan": "Upgrade your Plan",
+        "pro": "Pro",
+        "to_get": "to get",
+        "plan_documents": "documents",
+        "and": "and",
+        "per_month": "per month.",
+        "enterprise": "Enterprise",
+        "no_of_documents_and_queries_per_month": "no. of documents and queries per month",
+        "proceed": "Proceed",
+        "cancel": "Cancel",
+        "end_of_billing_cycle": "Your subscription is valid till the end of billing cycle i.e",
+        "post_billing_cycle": "Post billing cycle your app will not respond to the end users",
+        "access_to_your_app_for_15_more_days": "However, you will have access to your app for 15 more days after cancellation to either reactivate or take a backup of your application. After 15 days your app will be permanently deleted",
+        "reason_you_want_cancel": "What is the Reason you want to Cancel?",
+        "it’s_too_costly": "It’s too costly",
+        "found_another_product": "I found another product that fulfils my needs",
+        "don’t_use_it_enough": "I don’t use it enough",
+        "don’t_need_it_now": "I don’t need it now",
+        "other": "Other",
+        "comments": "Comments",
+        "later": "Later",
+        "current_plan": "Current Plan",
+        "last_active_plan": "Last Active Plan",
+        "go_to_details": "Go to Details",
+        "custom_pricing": "Custom Pricing",
+        "order_confirmation": "Order Confirmation",
+        "you_are_changing_from": "You are changing from",
+        "to": "to",
+        "plan": "plan",
+        "please_find_the_order": "Please find the order summary below",
+        "you_have_added_additional": "You have added additional",
+        "plan_queries": "queries",
+        "to_your_plan": "to your plan",
+        "your_plan_will_charged": "Your plan will be changed at the end of billing cycle of current plan i.e",
+        "PLAN": "PLAN",
+        "Amount": "AMOUNT",
+        "subscription": "Subscription",
+        "document_overage": "Document Overage",
+        "query_overage": "Query Overage",
+        "total_amount": "Total Amount",
+        "note": "Note",
+        "same_payment_method": "We will use the same payment method as your previous transaction",
+        "confirm": "Confirm",
+        "pay": "Pay",
+        "payment_details": "Payment Details",
+        "payment_confirmation": "Payment Confirmation",
+        "yay": "Yay!",
+        "you_are_Pro_member": "You are a Pro member now",
+        "payment_successfull": "Payment Successfull...",
+        "download_invoice": "Download Invoice",
+        "payment_failed": "Oops! Payment Failed!!",
+        "retry_payment": "Retry Payment",
+        "choose_another_plan": "I see, you want to choose another plan. Please",
+        "delete_excess": "delete the excess document & Index",
+        "automatically_deactivated": "to change the plan. Rules, Workbench stages & Experiments added in your application will be automatically deactivated",
+        "features": "FEATURES",
+        "excess": "Excess",
+        "okay": "Okay"
     }
+    // "searchInterface": {
+    //     "name": "Search Interface",
+    //     "experience": "Experience",
+    //     "search_widget": "Search Widget",
+    //     "interactions": "Interactions",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    //     "": "",
+    // }
 }
