--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -191,7 +191,7 @@
     "stopWords": {
         "stop_words": "Stop Words",
         "enable_stop_word_removal": "Enable StopWords ",
-        "stop_word_removal_disabled": "Stop Word Removal Disabled",
+        "disable_stop_word_removal": "Disable StopWords",
         "add_stop_word": "Add Stop Word",
         "stop_word_already_added": "Stop word already added",
         "stop_word_should_not_have_space_in_between": "Stop word should not have space in between",
@@ -511,6 +511,60 @@
         "no_results_found":"No results found",
         "add":"Add",
         "cancel":"Cancel"
-    }
+    },
+    "invoices":{
+        "invoices":"Invoices",
+        "current_plan":"Current Plan",
+        "invoices_id_caps":"INVOICE ID",
+        "BILLING_period":"BILLING period",
+        "invoice_amount_caps":"INVOICE AMOUNT",
+        "subscription_caps":"SUBSCRIPTION",
+        "invoice_date_caps":"INVOICE DATE"
+
+    },
+    "ussageLog":{
+        "ussageLog":"Usage Log",
+        "usage_log_will_appear_once_the_app_is_active":"Usage log will appear once the app is active!!",
+        "current_plan":"Current Plan",
+        "free":"Free",
+        "search_query":" Search Query",
+        "type":"Type ",
+        "all": "All",
+        "results_caps":"RESULTS",
+        "date_&_time":" Date & Time "
+    },
+    "contentSource":{
+            "content":"Content",
+            "no_content":"You haven’t added any content data yet!",
+            "no_content_info":"The Content is the data ingested into SearchAssist that are indexed to answer search user queries. SearchAssist allows you to add content by crawling web domain and uploading documents.",
+            "add_content":"Add Content",
+            "craw_web_domain":"Crawl Web Domain",
+            "upload_file":"Upload File",
+            "no_search_query":"Your Search Query doesn't match with any record.",
+            "content_management":"Content Management",
+            "source_title_caps":"SOURCE TITLE",
+            "type_caps":"TYPE",
+            "all":"All",
+            "status_caps":" STATUS",
+            "no_of_pages_caps":" NO OF PAGES",
+            "triggered_by_caps":"TRIGGERED BY",
+            "no_results_found":"No results found",
+            "last_updated_on":"Last Updated on",
+            "in_progress":"In-progress",
+            "pages":"Pages",
+            "failed":"Failed",
+            "no_pages_available":"No Pages Available",
+            "configuration":"Configuration",
+            "executions":"Executions",
+            "title_caps":"TITLE",
+            "description_caps":"DESCRIPTION",
+            "url_caps":"URL",
+            "created_by_caps":"CREATED BY",
+            "last_updated_caps":"LAST UPDATED",
+            "sitemap_URLS":"Sitemap URLS",
+            "no_sitemaps":"No Sitemaps",
+            "schedule":"Schedule"
+    
+        }
    
 }
