bugs fixed in pricing

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -574,6 +574,7 @@
         "custom_pricing": "Custom Pricing",
         "order_confirmation": "Order Confirmation",
         "you_are_changing_from": "You are changing from",
+        "you_are_subscribing_to": "You are Subscribing to",
         "to": "to",
         "plan": "plan",
         "please_find_the_order": "Please find the order summary below",
