StructuredData File Import process - Done.

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -372,7 +372,8 @@
         "configuratoin_progress": "Configuration in Progress...",
         "validation_progress": "Validation in Progress...",
         "configuratoin_success": "Successfully Configured.",
-        "validation_success": "Successfully Validated",
+        "validation_success": "Validation Successfull",
+        "imported_success" : "Successfully Imported",
         "configuration_failed": "Configuration Failed",
         "validation_failed": "Validation Failed",
         "file_validation_failed": "File Validation.",
