bugs fixed in pricing

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -373,7 +373,7 @@
         "validation_progress": "Validation in Progress...",
         "configuratoin_success": "Successfully Configured.",
         "validation_success": "Validation Successfull",
-        "imported_success" : "Successfully Imported",
+        "imported_success": "Successfully Imported",
         "configuration_failed": "Configuration Failed",
         "validation_failed": "Validation Failed",
         "file_validation_failed": "File Validation.",
@@ -601,9 +601,8 @@
         "download_invoice": "Download Invoice",
         "payment_failed": "Oops! Payment Failed!!",
         "retry_payment": "Retry Payment",
-        "choose_another_plan": "I see, you want to choose another plan. Please",
-        "delete_excess": "delete the excess document & Index",
-        "automatically_deactivated": "to change the plan. Rules, Workbench stages & Experiments added in your application will be automatically deactivated",
+        "choose_another_plan": "If you want to choose another plan, please",
+        "delete_excess": "delete the excess Document, Index, Rules, Workbench stages and Experiments",
         "features": "FEATURES",
         "excess": "Excess",
         "okay": "Okay"
