i18n for result Ranking & search Interface

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -258,7 +258,21 @@
         "selected": "Selected"
     },
     "resultRanking": {
+        "resultRanking" : "Results Ranking",
+        "emptyTitle" : "You haven’t added any queries yet!",
+        "descText" : "Results Ranking is an interactive and visual way to tune results. SearchAssist allows you to preview and customize the search results as per the business needs",
+        "letstrat" : "Let's Start",
+        "reset" : "Reset",
+        "infoDiv" :"To Customize the results of a query, Click on the Test button at the top and enable customize mode.",
+        "selected" : "Selected",
+        "customization":"customization",
         "no_search_results": "No search results",
+        "PINNED" : "PINNED",
+        "HIDDEN" :"HIDDEN",
+        "LOWERED": "LOWERED",
+        "BOOSTED" : "BOOSTED",
+        "MANUALLYADDED" : "MANUALLY ADDED",
+        "Remove" : "Remove",
         "no._of_customizations_caps": "NO. OF CUSTOMIZATIONS",
         "last_changes_caps": "LAST UPDATED",
         "restore": "Reset",
@@ -769,6 +783,28 @@
         "disabled": "Disabled",
         "leftAligned": "Left Aligned",
         "rightAligned": "Right Aligned",
-        "topAligned": "Top Aligned"
+        "topAligned": "Top Aligned",
+        "customizeTemplate" : "Customize Template",
+        "templateType" :"Template Type",
+        "searchResultLayout" :"Search Result Layout",
+        "tilewithText" : "Tile with Text",
+        "heading" : "Heading",
+        "description" :"Description",
+        "clickable" :"Clickable",
+        "URL" :"URL",
+        "tilewithImage" :"Tile with Image",
+        "tilewithCenteredContent" :"Tile with Centered Content",
+        "tilewithHeader" : "Tile with Header",
+        "searchResultMapping" : "Search Result Mapping",
+        "image" : "Image",
+        "textAlignment" :"Text Alignment",
+        "centerAligned" : "Center Aligned",
+        "previewasperaboveselection" : "Preview as per above selection",
+        "collapsedstate" : "Collapsed state",
+        "expandedstate" : "Expanded state",
+        "cardBody" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
+        "save" : "Save",
+        "cancel" : "Cancel",
+        "previewTemplate" : "Preview Template"
     }
 }
