bot actions i18n changes

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -88,7 +88,47 @@
     "botAction": {
         "disable": "Disable",
         "enable": "Enable",
-        "tasksSelected": "Tasks Selected"
+        "tasksSelected": "Tasks Selected",
+        "bot_actions": "Bot Actions",
+        "view_all_bots": "View All Bots",
+        "you_havenot_linked_any_bot_yet!": "You haven’t linked any bot yet!",
+        "bot_actions_are_a_list_of_tasks": "Bot Actions are a list of tasks that are performed by the bots. SearchAssist allows you to link bots that can perform tasks for the search user.",
+        "your_search_query_doesnot_match_with_any_record": "Your Search Query doesn't match with any record.",
+        "bot_name": "Bot Name",
+        "owner": "Owner",
+        "universal_bot": "Universal Bot",
+        "link_a_bot": "Link a Bot",
+        "unlink_bot": "Unlink bot",
+        "edit_configuration": "Edit Configuration",
+        "the_app_can_interact_with_the_link_bot" : "The App can interact with the linked bot only after the Webhook channel is published",
+        "go_to_platform" : "Go to Platform",
+        "tasks" : "Tasks",
+        "task" : "Task",
+        "bot_related_task" : "Bot-related Task",
+        "link_bot" : "Link Bot",
+        "save" : "Save",
+        "link" : "Link",
+        "back" : "Back",
+        "bot_secret_id" : "Bot Secret ID",
+        "enter_bot_secret_id" : "Enter bot secret ID",
+        "bot_client_id" : "Bot Client ID",
+        "enter_bot_client_id" : "Enter bot client ID",
+        "webhook_url" : "Webhook URL",
+        "enter_post_url" : "Enter post url",
+        "post_url" : "Post URL",
+        "access_token" : "Access Token",
+        "enter_access_token" : "Enter access token",
+        "step" : "Step",
+        "show_less" : "Show less",
+        "show_how" : "Show how",
+        "you_can_link_a_virtual_assistant" : "You can link a Virtual Assistant built on the Kore.ai Platform with your SearchAssist app. To link, you will need to enable the Webhook channel on the Virtual Assistant and complete the integration.",
+        "bots_platform" : "Bots Platform",
+        "configuration" : "Configuration",
+        "the_searchassist_app_can_interact_with" : "The SearchAssist app can interact with the Virtual Assistant only after the Webhook channel is published.",
+        "get_the_client_id_and_secret_id" : "Get the Client ID & Secret ID from the Channel configuration page of the Virtual Assistant and provide here.",
+        "enable_webhook_channel_for_your" : "Enable Webhook channel for your Virtual Assistant using the Access Token & Post URL provided below.",
+        "please_subscribe_to_the_kore" : "Please subscribe to the Kore.ai bots platform to link a bot here",
+        "choose_any_bot_from_the_list" : "Choose any bot from the list to link it to your SearchAssist app."
     },
     "businessRules": {
         "rules_selected": "Rules Selected",
