--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -871,5 +871,47 @@
         "type_and_enter_to_add_traits" : "Type and Enter to Add Traits",
         "enter_trait_group" : "Enter Trait Group",
         "type_and_enter_to_add_utterances" : "Type and Enter to Add Utterances"
+    },
+    "fields": {
+        "fields": "Fields",
+        "add_field": "Add Field",
+        "add": "Add",
+        "save": "Save",
+        "canel": "Cancel",
+        "the_field_type_has_been_changed_from": "The field type has been changed from",
+        "to": "to",
+        "indexed_property_has_been_set_to_false": "Indexed Property has been set to False.",
+        "defalult_value_optional": "Default Value (Optional)",
+        "indexed": "Indexed",
+        "stored": "Stored",
+        "required": "Required",
+        "multi_valued": "Multi-Valued",
+        "multi_value": "Multi-Value",
+        "select_ones_that_apply": "Select ones that apply",
+        "dynamic": "Dynamic",
+        "string": "String",
+        "number": "Number",
+        "trait": "Trait",
+        "dense_vector": "Dense Vector",
+        "entity": "Entity",
+        "keyword": "Keyword",
+        "array": "Array",
+        "object": "Object",
+        "field_type": "Field Type",
+        "the_field_type_has_been_changed": "The Field type has been changed",
+        "is_not_indexed": "is not indexed",
+        "field_name": "Field Name",
+        "no_fields_available": "No fields available",
+        "type": "Type",
+        "no_search_results_found": "No search results found",
+        "edit_field": "Edit Field",
+        "enter_field_name": "Enter Field Name",
+        "add_value_here": "Add Value Here",
+        "document_might_contain_multiple": "Document might contain multiple values for this field",
+        "documents_that_do_not_contain_value": "Documents that do not contain value for this field will be rejected",
+        "value_of_the_field_can_be_fetched_by_the_search_queries": "Value of the field can be fetched by the search queries",
+        "value_of_the_field_can_be_used_in_search_queries": "Value of the field can be used in search queries to fetch matched documents",
+        "edit": "Edit",
+        "delete": "Delete"
     }
 }
