faq i18n , channel fixes

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -806,5 +806,97 @@
         "save" : "Save",
         "cancel" : "Cancel",
         "previewTemplate" : "Preview Template"
+    },
+    "faqSource":{
+        "faqs":"FAQs",
+        "extract_faqs":"Extract FAQs",
+        "import_faqs":"Import FAQs",
+        "add_manually":"Add Manually",
+        "export_to_json":"Export to JSON",
+        "export_to_csv":"Export to CSV",
+        "manage_extracts":"Manage Extracts",
+        "export_to_json_inprogress_check_sd":"Export to JSON is in progress. You can check the status in the Status Docker",
+        "no_faqs":"You haven’t added any FAQ's yet!",
+        "no_faqs_info":"FAQs is  a form of source documents that contain solutions for the frequently asked questions. SearchAssist allows you to add FAQs in multiple ways to assist search users with their queries.",
+        "add_faqs":"Add FAQs",
+        "no_search_results_for_match":"Your Search Query doesn't match with any record.",
+        "drafts":"Drafts",
+        "inreview":"In-review",
+        "approved":"Approved",
+        "filter":"Filter",
+        "all":"All",
+        "manual":"Manual",
+        "needs_rework":"Needs Rework",
+        "approve":"Approve",
+        "delete":"Delete",
+        "move_to_drafts":"Move to Drafts",
+        "send_for_review":"Send for Review",
+        "follow_up":"Follow-up",
+        "no_search_results":"No search results",
+        "no_questions":"No Questions",
+        "please_add_questions":"Please add questions",
+        "please_select_questions":"Please select a question",
+        "sent_for_review_on_caps":"SENT FOR REVIEW ON",
+        "source_caps":"SOURCE",
+        "edited_by_caps":"EDITED BY",
+        "cancel":"Cancel",
+        "post":"Post",
+        "edited_on_caps":"EDITED ON",
+        "approved_on":"Approved ON",
+        "reviewed_by":"REVIEWED BY",
+        "response":"Response",
+        "conditions": "Condition",
+        "when_caps":"WHEN",
+        "and_caps":"AND",
+        "see_all":"See All",
+        "appearances":"Appearances",
+        "clicks":"Clicks",
+        "alternate_questions":"Alternate Questions",
+        "extracts":"Extracts",
+        "web_url":"Web URL",
+        "upload_file":"Upload File",
+        "no_sources":"No FAQ sources are available",
+        "source_title_caps":"SOURCE TITLE",
+        "type_caps":"TYPE  ",
+        "status_caps":"STATUS ",
+        "no_of_faqs":"No. Of FAQS",
+        "triggered_by_caps":"TRIGGERED BY",
+        "add_follow_up_faq":"Add Follow Up FAQ",
+        "save":"Save",
+        "edit_faq":"Edit FAQ"
+    },
+    "addFaq":{
+        "source":"Source",
+        "custom":"Custom",
+        "add_new_options":"Add new options",
+        "referenceId":"ReferenceId",
+        "question":"Question",
+        "response":"Response",
+        "response_preview":"Response Preview",
+        "image_optional":"Image (Optional)",
+        "preview":"Preview",
+        "template_outlook":"The end-users will see the response as per the template you select in the Search Experience",
+        "add_conditions":"Add Conditions",
+        "conditions":"Conditions",
+        "and":"And",
+        "select_contect":"Select Context",
+        "select_parameters":"Set Parameters",
+        "or_caps":"OR",
+        "select_range":"Select Range",
+        "select_date":"Select Date",
+        "range_seperated_by":"Range separated by ",
+        "add_condition":"Add Condition",
+        "alternate_questions":"Alternate Questions",
+        "add_alt_ques":"Add alternate forms of the question.",
+        "add":"Add",
+        "provide_img_url":"Provide Image URL",
+        "url_caps":"URL",
+        "name":"Name",
+        "provide_link_url":"Provide link URL",
+        "link_text":"Link Text",
+        "external":"External",
+        "contact_details_info":"It is extremely important that you keep your contact information on your account updated at all times. To update your address, phone numbers and email address, please login to your account and edit your contact details under the “Your Contact Details” link on the left navigation. To make changes to your account, you will also need to enter an Online Authorization Code (OAC) that will be sent to your registered mobile phone on your account and to your registered email address to authenticate this transaction.",
+        "close":"Close"
     }
+        
 }
