--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -883,7 +883,7 @@
         "cancel":"Cancel",
         "post":"Post",
         "edited_on_caps":"EDITED ON",
-        "approved_on":"Approved ON",
+        "approved_on_caps":"Approved ON",
         "reviewed_by":"REVIEWED BY",
         "response":"Response",
         "conditions": "Condition",
