i18n for overview Page

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -1005,6 +1005,33 @@
         "edit": "Edit",
         "delete": "Delete"
     },
+    "overview" : {
+        "overview" : "Overview",
+        "tour_info" : "Shows the Birds eye view of configurations in your App",
+        "gotIt" : "Got It",
+        "totalUsers" : "Total Users",
+        "last_24hrs" :"Last 24 Hrs",
+        "viewInsights" :"View Insights",
+        "totalSearches" : "Total Searches",
+        "resultRate" : "Result Rate",
+        "clicks" : "Clicks",
+        "CTR" : "CTR",
+        "indices" :"Indices",
+        "CONTENT" :"CONTENT",
+        "FAQS" : "FAQS",
+        "ACTIONS" : "ACTIONS",
+        "STRUCTURED_DATA" : "STRUCTURED DATA",
+        "activities" : "Activities",
+        "show_all_activities" : "Show all activities",
+        "faq_Pending_Approval" : "Faq's Pending Approval",
+        "ago" :"ago",
+        "experiments" : "Experiments",
+        "create_New" : "Create New",
+        "experiment_Name" : "Experiment Name",
+        "status" : "Status",
+        "view_all"  : "View all",
+        "configured_Channels" : "Configured Channels"
+    },
     "workbench": {
         "index_configuration": "Index Configuration",
         "saving": "Saving",
