loreum im - card body

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -844,7 +844,7 @@
         "previewasperaboveselection": "Preview as per above selection",
         "collapsedstate": "Collapsed state",
         "expandedstate": "Expanded state",
-        "cardBody": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
+        "cardBody": "Field mapped for Description will appear here. Field mapped for description will appear here. Field mapped for description will appear here. Field mapped for description will appear here.",
         "save": "Save",
         "cancel": "Cancel",
         "previewTemplate": "Preview Template"
