--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -844,7 +844,7 @@
         "previewasperaboveselection": "Preview as per above selection",
         "collapsedstate": "Collapsed state",
         "expandedstate": "Expanded state",
-        "cardBody": "Field mapped for Description will appear here. Field mapped for description will appear here. Field mapped for description will appear here. Field mapped for description will appear here.",
+        "cardBody": "This is a preview for displaying text in the expanded state and your description of the search result will be displayed here in the same format.",
         "save": "Save",
         "cancel": "Cancel",
         "previewTemplate": "Preview Template"
