--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -741,7 +741,7 @@
         "type_caps": "TYPE",
         "all": "All",
         "status_caps": " STATUS",
-        "no_of_pages_caps": " NO OF DOCS",
+        "no_of_docs_caps": " NO OF DOCS",
         "triggered_by_caps": "TRIGGERED BY",
         "no_results_found": "No results found",
         "last_updated_on": "Last Updated on",
