FLY-2754 issue fixed

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -630,7 +630,7 @@
         "go_to_details": "Go to Details",
         "custom_pricing": "Custom Pricing",
         "order_confirmation": "Order Confirmation",
-        "you_are_changing_from": "You are changing from",
+        "you_are_changing_from": "You are switching from",
         "you_are_subscribing_to": "You are Subscribing to",
         "to": "to",
         "plan": "plan",
