FLY-2769 In the Invoice landing screen, Text below image is blurred issue fixed

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -715,7 +715,8 @@
         "BILLING_period": "BILLING period",
         "invoice_amount_caps": "INVOICE AMOUNT",
         "subscription_caps": "SUBSCRIPTION",
-        "invoice_date_caps": "INVOICE DATE"
+        "invoice_date_caps": "INVOICE DATE",
+        "after_subscribing_to_any_of_the_plans_offered_your_invoices_will_appear_here": "After subscribing to any of the plans offered, your invoices will appear here"
     },
     "ussageLog": {
         "ussageLog": "Usage Log",
