--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -332,6 +332,11 @@
             "result_rate": "Result Rate",
             "ctr": "Click-Through Rate",
             "clicks": "Clicks",
+            "24_Hrs":"24 Hrs",
+            "7_Days":"7 Days",
+            "Custom" :"Custom",
+            "Result_Rate" :"Result Rate",
+            "CTR" : "CTR",
             "avg_click_position": "Avg. Click Position",
             "searches_with_result": "Searches with Results",
             "searches_with_click": "Searches with Clicks",
@@ -1018,6 +1023,7 @@
         "resultRate": "Result Rate",
         "clicks": "Clicks",
         "CTR": "CTR",
+        "Result_rate" : "Result Rate",
         "Sources": "Sources",
         "add_more": "Add More",
         "FAQS": "FAQs",
