overview css issues fixed

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -329,14 +329,14 @@
             "total_user": "Total Users",
             "total_searches": "Total Searches",
             "search_trends": "Search Trends",
-            "result_rate": "Result Rate",
+            "result_rate": "Searches with Results",
             "ctr": "Click-Through Rate",
             "clicks": "Clicks",
-            "24_Hrs":"24 Hrs",
-            "7_Days":"7 Days",
-            "Custom" :"Custom",
-            "Result_Rate" :"Result Rate",
-            "CTR" : "CTR",
+            "24_Hrs": "24 Hrs",
+            "7_Days": "7 Days",
+            "Custom": "Custom",
+            "Result_Rate": "Result Rate",
+            "CTR": "CTR",
             "avg_click_position": "Avg. Click Position",
             "searches_with_result": "Searches with Results",
             "searches_with_click": "Searches with Clicks",
@@ -539,6 +539,7 @@
         "start_date": "Start Date",
         "end_date": "End Date",
         "more": "more to go",
+        "searches_results": "SEARCHES WITH RESULTS",
         "cannot_run": "You cannot run multiple experiments",
         "run": "Run",
         "view_configuration": "View configuration",
@@ -709,7 +710,7 @@
         "choose_template": "Choose Template ",
         "grid": "Grid",
         "list": "List",
-        "carousel": "Carousel"        
+        "carousel": "Carousel"
     },
     "teams": {
         "team": "Team",
@@ -1030,10 +1031,10 @@
         "last_24hrs": "Last 24 Hrs",
         "viewInsights": "View Insights",
         "totalSearches": "Total Searches",
-        "resultRate": "Result Rate",
+        "resultRate": "Searches with Results",
         "clicks": "Clicks",
         "CTR": "CTR",
-        "Result_rate" : "Result Rate",
+        "Result_rate": "Result Rate",
         "Sources": "Sources",
         "add_more": "Add More",
         "FAQS": "FAQs",
@@ -1243,40 +1244,40 @@
         "optimize": "Optimize",
         "i_want_to_Explore": "I want to Explore by Myself"
     },
-    "header" : {
-        "overview" : "Overview",
-        "sources" : "SOURCES",
-        "indices" : "Indices",
-        "analytics" : "Analytics",
-        "dashboard" : "Dashboard",
-        "userEngagement" : "User Engagement",
-        "searchInsights" : "Search Insights",
-        "resultInsights" : "Results Insights",
-        "manage" : "MANAGE",
-        "searchAssistApps" : "SearchAssist Apps",
-        "recentApps" : "Recent Apps",
-        "viewAllApps" : "View all Apps",
-        "createNewApp" : "Create New App",
-        "test" : "Test",
-        "previewAndCustomize" : "Preview & Customize search results.",
-        "trainYourApp" : "Train your App",
-        "statusUpdates" : "Status Updates",
-        "emptyStatusRecords" : "You got no records in StatusDocker.",
-        "activities" : "Activities",
-        "accounts" : "Accounts",
-        "accountOne" : "account one",
-        "accountsTwo" : "account two",
-        "switchAccount" : "Switch Account",
-        "logout" : "Logout",
-        "cancel" : "Cancel",
-        "createApp" : "Create App",
-        "appName" : "App Name",
-        "enterAppName" : "Enter App Name",
-        "description" : "Description",
-        "enterAppDescription" : "Enter App Description",
-        "language" : "Language",
-        "english" : "English",
-        "create" : "Create",
-        "search" : "Search"
+    "header": {
+        "overview": "Overview",
+        "sources": "SOURCES",
+        "indices": "Indices",
+        "analytics": "Analytics",
+        "dashboard": "Dashboard",
+        "userEngagement": "User Engagement",
+        "searchInsights": "Search Insights",
+        "resultInsights": "Results Insights",
+        "manage": "MANAGE",
+        "searchAssistApps": "SearchAssist Apps",
+        "recentApps": "Recent Apps",
+        "viewAllApps": "View all Apps",
+        "createNewApp": "Create New App",
+        "test": "Test",
+        "previewAndCustomize": "Preview & Customize search results.",
+        "trainYourApp": "Train your App",
+        "statusUpdates": "Status Updates",
+        "emptyStatusRecords": "You got no records in StatusDocker.",
+        "activities": "Activities",
+        "accounts": "Accounts",
+        "accountOne": "account one",
+        "accountsTwo": "account two",
+        "switchAccount": "Switch Account",
+        "logout": "Logout",
+        "cancel": "Cancel",
+        "createApp": "Create App",
+        "appName": "App Name",
+        "enterAppName": "Enter App Name",
+        "description": "Description",
+        "enterAppDescription": "Enter App Description",
+        "language": "Language",
+        "english": "English",
+        "create": "Create",
+        "search": "Search"
     }
 }
