faq high fix, cred copy,search-exp typo

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -1179,7 +1179,7 @@
         "60": "60",
         "not_sure": "Not Sure! What you can do with these interaction settings?",
         "let_us_help_you_choose": "Let us help you choose",
-        "show_searches": "Show Searches",
+        "show_recent_searches": "Show Receent Searches",
         "frequent": "Frequent",
         "recent": "Recent",
         "autocomplete": "Autocomplete",
