--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -1070,6 +1070,7 @@
         "indices": "Indices"
     },
     "workbench": {
+        "workbench": "Workbench",
         "index_configuration": "Index Configuration",
         "saving": "Saving.",
         "save_configuration": "Save Configuration",
