memory heap issue

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -659,7 +659,7 @@
         "payment_confirmation": "Payment Confirmation",
         "yay": "Yay!",
         "you_are_Pro_member": "You are a Pro member now",
-        "payment_successfull": "Payment Successfull...",
+        "payment_successfull": "Payment Successful...",
         "download_invoice": "Download Invoice",
         "payment_failed": "Oops! Payment Failed!!",
         "retry_payment": "Retry Payment",
