add facets done

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -252,6 +252,7 @@
         "facets": "Facets",
         "add_facet": "Add Facet",
         "edit_facet": "Edit Facet",
+        "configure_facets": "Configure Facets",
         "deselect": "Deselect",
         "delete_facets": "Delete Facets",
         "facet_caps_Name": "FACET NAME",
@@ -798,15 +799,15 @@
         "no_publish_information_available": "No publish information available",
         "cancel": "Cancel",
         "save": "Save",
-        "delete":"Delete",
-        "recrawl":"Recrawl",
-        "view_details":"View Details",
-        "description":"Description",
-        "document":"Document",
-        "no_of_pages":"No. Of. Pages",
-        "last_updated":"Last Updated",
-        "results_preview":"Results Preview",
-        "structuredData" : "Structured Data"
+        "delete": "Delete",
+        "recrawl": "Recrawl",
+        "view_details": "View Details",
+        "description": "Description",
+        "document": "Document",
+        "no_of_pages": "No. Of. Pages",
+        "last_updated": "Last Updated",
+        "results_preview": "Results Preview",
+        "structuredData": "Structured Data"
     },
     "resultTemplate": {
         "resultTemplates": "Result Templates",
