--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -1032,7 +1032,7 @@
         "viewInsights": "View Insights",
         "totalSearches": "Total Searches",
         "resultRate": "Searches with Results",
-        "clicks": "Clicks",
+        "clicks": "Searches with Click",
         "CTR": "CTR",
         "Result_rate": "Result Rate",
         "Sources": "Sources",
